RESOLVED FIXED290963
[Page color sampling] hulu.com: bottom fixed container is incorrectly treated as fixed container edge
https://bugs.webkit.org/show_bug.cgi?id=290963
Summary [Page color sampling] hulu.com: bottom fixed container is incorrectly treated...
Wenson Hsieh
Reported 2025-04-02 17:46:36 PDT
Attachments
Wenson Hsieh
Comment 1 2025-04-02 19:57:42 PDT
EWS
Comment 2 2025-04-02 23:41:27 PDT
Committed 293146@main (25a957aaa1f7): <https://commits.webkit.org/293146@main> Reviewed commits have been landed. Closing PR #43516 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.